kube-hw-2/1-create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw-prod

---
apiVersion: v1
kind: Namespace
metadata:
  name: hw-canary
