kube-hw-2/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web
  namespace: hw-prod
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: web

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web
  namespace: hw-canary
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: web
