kube-hw-2/5-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: hw-prod
spec:
  rules:
  - host: test.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 80


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"

  namespace: hw-canary
spec:
  rules:
  - host: test.test
    http:
      paths:
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 80
